--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,30 @@ body {
     background-color: black;
     font-family: "Raleway",Arial,Helvetica,sans-serif;
     font-size: 16px;
+    /*overflow: hidden; !* Hide scrollbars *!*/
+}
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 
 /*----------------- preload ------------------------*/
 .preload{
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     background-color: black;
-    z-index: 999;
+    z-index: 999999;
 }
+
 .preload.hide{
     animation: fade 3s ease-in-out;
     animation-fill-mode: forwards;
